# evaluate_japanese_w2v

./: .gitignore  LICENSE  Pipfile  README.md  eval.py  pyproject.toml  requirements.txt
src/: ja_tokenizer.py  similarity.py
