[tool.poetry]
name = "evaluate_japanese_w2v"
version = "0.1.1"
description = ""
authors = ["shihono <26952997+shihono@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
gensim = "<=3.8.3"
scipy = "<1.8.0"
chardet = "^4.0.0"
mecab-python3 = "^1.0.5"
SudachiPy = "^0.6.3"
SudachiDict-core = "^20211220"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
